2001-11-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gump_utils.cc, Modal_gump.h, Newfile_gump.*: added mousewheel support
	to new file gump (mousewheel = scroll lines, alt-mousewheel = pages)

2001-11-02  Christian Ohm  <chr.ohm@gmx.net>

	* exult.cc, gamewin.cc/h, gumps/GameplayOptions_gump.cc/h
	gumps/Gump_manager.cc/h, gumps/gump_utils.cc, data/flx.in,
	data/gameplayoptions.shp: added larger gameoptions menu shape
	* made paperdolls in bg default to on
	* removed weird event loops
	* rearranged layout of gameoptions window
	* added 'doubleclick closes gumps'-option
	* added 'walk after teleport'-option for si
	  
2001-11-02  Jeff Freedman  <jeff@amy.nerble.net>

	* npctime.cc (Npc_timer_list): Paralyze timer.

2001-11-01  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Clear object's current text before
	showing new text.
	* actors.cc (figure_hit_points):  If weapon points == 0, don't
	take away any hit points.  Fixes, i.e., Curse spell.

	* actors.cc (Npc_actor): A couple asserts added to find a bug.
	* objs/chunks.cc: Fixed gravity() bug (and warning).

2001-11-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gamewin.cc, cheat_screen.cc: implemented NPC-browser's 'teleport' key
	* gamewin.cc, ??game.cc: more palette flashes fixed

2001-10-31  Dancer Vesperman  <dancer@users.sourceforge.net>

	* actions.cc, actors.cc, cheat.cc, combat.cc, monsters.cc, npctime.cc: Improved casts. This'd be a whole lot easier if you folks remembered to use them, you know :)

2001-10-30  Max Horn  <max@quendi.de>
	* added docs/xml: unified faq and readme
	* docs/faq, docs/readme: removed

2001-10-29  Dominik Reichardt <gigdr@tesionmail.de>
	* docs/faq and docs/readme: unified xsl and dtd files, changed makefiles
	  accordingly and updated exult_faq.xml/readme.xml
	* Faq, Readme updated

>>>>>>> 1.1128
2001-10-27  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: Don't teleport party members in 'wait' state.